{
    "name": "MasterControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "a90845e3-035b-42c6-a6f0-551a5e93a3b7",
            "actions": [
                {
                    "name": "MoveAndSteer",
                    "type": "Button",
                    "id": "fdaf041a-6993-4f53-a982-87458662c125",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Aim",
                    "type": "Button",
                    "id": "41e23456-a6ed-44c4-b16d-66a807a387d4",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LockTarget",
                    "type": "Button",
                    "id": "466cf53c-10ee-4a35-a895-537c89c69825",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ShootGun",
                    "type": "Button",
                    "id": "ac16d76f-1cba-4d75-8921-e34e57a3df9c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ZoomIn",
                    "type": "Button",
                    "id": "1a618f54-11ef-4b4e-bb0f-b17d9eb8f75c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ZoomOut",
                    "type": "Button",
                    "id": "0233200c-27b6-4326-83a2-97086fa7a3b2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SwitchCamera",
                    "type": "Button",
                    "id": "8197ed59-5f71-4138-8f07-baeb7d80328b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6f304450-b2d5-4ab0-84ee-0746b2cbbd9c",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveAndSteer",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6100cce1-c6c6-4a54-a1b5-f44e2990f4a0",
                    "path": "<Gamepad>/dpad",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveAndSteer",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "480477df-dacf-41e3-b7ed-24162b831316",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Aim",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ca146781-eb4d-49c5-bfef-7c32f71f55d9",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LockTarget",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a59fbbaf-4ce9-427c-a11f-91b01e61ef5f",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShootGun",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b7702dc1-423b-48b4-a4f0-3e0504befef7",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ZoomIn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1a994151-33a7-4aca-b782-86d62a038c18",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ZoomOut",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "106c8c8b-83ca-4f80-adf3-bbacac028493",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}